codama-macros/tests/codama_attribute/values_nodes/sysvar/too_many_inputs.fail.rs
use codama_macros::codama;

#[codama(default_value = sysvar("rent", "clock"))]
pub struct Test;

fn main() {}
